Fully adopt Titanium v2-M2 - 100% pass. Remove JSON-LD artifacts